--- a/mockup/fullscreen-login.html
+++ b/mockup/fullscreen-login.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container converse-bg">
-        <h1 class="brand-heading">inVerse</h1>
+        <!-- <h1 class="brand-heading">inVerse</h1> -->
     </div>
 
     <div id="conversejs" class="fullscreen">
@@ -20,17 +20,17 @@
                 <div class="flyout box-flyout">
                     <div class="controlbox-panes">
                         <div class="row">
-                            <div class="brand-heading-container">
+                            <!-- <div class="brand-heading-container">
                                 <h1 class="brand-heading"><i class="icon-conversejs"></i> inVerse</h1>
                                 <p class="brand-subtitle"><a target="_blank" rel="nofollow" href="https://conversejs.org">Open Source</a> XMPP chat client</p>
                                 <p class="brand-subtitle"><a target="_blank" rel="nofollow" href="https://hosted.weblate.org/projects/conversejs/#languages">Translate</a> into your own language</p>
-                            </div>
+                            </div> -->
                         </div>
 
                         <div id="converse-login-panel" class="controlbox-pane fade-in row">
                             <form id="converse-login" class="converse-form" method="post">
                                 <div class="form-group">
-                                    <label for="jid">XMPP Username:</label>
+                                    <label for="jid">Username:</label>
                                     <input type="text" name="jid" class="form-control" placeholder="user@server" autocomplete="off">
                                 </div>
                                 <div class="form-group">
@@ -40,7 +40,7 @@
                                 <fieldset class="buttons">
                                     <p><input class="btn btn-primary" type="submit" value="Log In"></p>
                                     <div class="switch-form">
-                                        <p>Don't have an XMPP account?</p>
+                                        <p>Don't have an User account?</p>
                                         <p>Click <a href="#" data-toggle="modal" data-target="#registerModal">here</a> to register.</p>
                                     </div>
                                 </fieldset>
