--- a/mockup/controlbox.html
+++ b/mockup/controlbox.html
@@ -29,6 +29,14 @@
         </div>
     </div>
 </div>
+<div class="search-block">
+    <div class="form-group form-group-feedback form-group-feedback-left">
+        <input type="text" class="form-control border-0" placeholder="Search">
+        <div class="form-control-feedback">
+            <i class="fa fa-search"></i>
+        </div>
+    </div>
+</div>
 
 <div id="chatrooms" class="controlbox-section">
     <div class="d-flex controlbox-padded">
