--- a/dev.html
+++ b/dev.html
@@ -30,7 +30,7 @@ var nickColors = {};
           allow_logout: true,
           allow_muc_invitations: true,
           registration_domain: 'openfire.meetrix.io',
-          xhr_user_search_url: 'http://link-im.com:9090/plugins/restapi/v1/users?',
+          // xhr_user_search_url: 'http://link-im.com:9090/plugins/restapi/v1/users?',
           //archived_messages_page_size: getSetting("archivedMessagesPageSize", 51),
           //authentication: "login",//anonUser ? "anonymous" : "login",
           //auto_join_rooms: autoJoinRooms,
