ChatArea add controle class

--- a/dev.html
+++ b/dev.html
@@ -76,7 +76,7 @@ var nickColors = {};
           //show_send_button: getSetting("showSendButton", false),
           sounds_path: 'sounds/',
           view_mode: 'fullscreen',
-          visible_toolbar_buttons: {'emoji': true, 'call': true, 'clear': true, spoiler:true },
+          visible_toolbar_buttons: {'emoji': true, 'call': false, 'clear': true, spoiler:true },
           //websocket_url: connUrl,
         //   theme: 'concord',
            whitelisted_plugins: whitelistedPlugins,
