--- a/dev.html
+++ b/dev.html
@@ -18,7 +18,7 @@
 <div id="conversejs-bg"></div>
 <script>
 var whitelistedPlugins = [];
-var domain = 'openfire.meetrix.io';
+var domain = 'link-im.com';
 var port = location.protocol === 'https:' ?'7443':'7070';
 var avatars = {};
 var nickColors = {};
@@ -29,7 +29,7 @@ var nickColors = {};
           allow_public_bookmarks: true,
           allow_logout: true,
           allow_muc_invitations: true,
-          registration_domain: 'openfire.meetrix.io',
+          registration_domain: domain,
           // xhr_user_search_url: 'http://link-im.com:9090/plugins/restapi/v1/users?',
           //archived_messages_page_size: getSetting("archivedMessagesPageSize", 51),
           //authentication: "login",//anonUser ? "anonymous" : "login",
