--- a/dev.html
+++ b/dev.html
@@ -12,6 +12,7 @@
     <link type="text/css" rel="stylesheet" media="screen" href="css/converse.css" />
     <script src="3rdparty/libsignal-protocol.js"></script>
     <script src="dist/converse.js"></script>
+    <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script>
 </head>
 
 <body class="reset">
