--- a/dev.html
+++ b/dev.html
@@ -170,7 +170,7 @@ function setAvatar(nickname, avatar)
           locked_muc_nickname: true,
           muc_nickname_from_jid:true,
           auto_register_muc_nickname:true,
-        //   muc_instant_rooms: false,
+        muc_instant_rooms: false,
           images:{
             login_bottom_image:'https://i.imgur.com/omxuqo5.png'
           },
@@ -179,7 +179,30 @@ function setAvatar(nickname, avatar)
             mediumRegex:'^(((?=.*[a-z])(?=.*[A-Z]))|((?=.*[a-z])(?=.*[0-9]))|((?=.*[A-Z])(?=.*[0-9])))(?=.{6,})'
           },
           username_regex:'^[a-zA-Z0-9]+$',
-          fullname_regex: '^[a-zA-Z\s]+$'
+          fullname_regex: '^[a-zA-Z\s]+$',
+          roomDefaultConfiguration:{
+                'roomname':'',
+                'roomdesc': 'Comfy room for hanging out',
+                'changesubject': false,
+                'maxusers':'40',
+                'presencebroadcast':'moderator',
+                'publicroom': false,
+                'persistentroom': true,
+                'moderatedroom':false,
+                'membersonly': true,
+                'allowinvites':false,
+                'passwordprotectedroom':false,
+                'roomsecret':'scret',
+                'whois': 'moderators',
+                'allowpm':'moderators',
+                'enablelogging':true,
+                'reservednick':false,
+                'canchangenick':true,
+                'registration':false,
+                'roomadmins':[],
+                'roomowners':[],
+            }
+          
     });
 </script>
 </body>
