--- a/dev.html
+++ b/dev.html
@@ -170,7 +170,7 @@ function setAvatar(nickname, avatar)
           locked_muc_nickname: true,
           muc_nickname_from_jid:true,
           auto_register_muc_nickname:true,
-        muc_instant_rooms: false,
+        // muc_instant_rooms: false,
           images:{
             login_bottom_image:'https://i.imgur.com/omxuqo5.png'
           },
@@ -201,7 +201,8 @@ function setAvatar(nickname, avatar)
                 'registration':false,
                 'roomadmins':[],
                 'roomowners':[],
-            }
+            },
+            'room_auto_configure': true,
           
     });
 </script>
