Room Default Configuration room default configuration list-multi support

--- a/dev.html
+++ b/dev.html
@@ -187,7 +187,7 @@ function setAvatar(nickname, avatar)
                 'roomdesc': 'Comfy room for hanging out',
                 'changesubject': false,
                 'maxusers':'40',
-                'presencebroadcast':'moderator',
+                'presencebroadcast':['moderator','participant'],
                 'publicroom': false,
                 'persistentroom': true,
                 'moderatedroom':false,
