--- a/dev.html
+++ b/dev.html
@@ -157,7 +157,7 @@ function setAvatar(nickname, avatar)
           show_chatstate_notifications: true,
           //show_only_online_users: getSetting("converseShowOnlyOnlineUsers", false),
           //show_send_button: getSetting("showSendButton", false),
-          sounds_path: 'sounds/',
+          sounds_path: 'chatapp/sounds/',
           view_mode: 'fullscreen',
           visible_toolbar_buttons: {'emoji': true, 'call': false, 'clear': true, spoiler:true },
           //websocket_url: connUrl,
