Added a class for direct one to one chat chatbox as direct-chat

--- a/mockup/chatbox.html
+++ b/mockup/chatbox.html
@@ -20,7 +20,7 @@
                 </div>
             </div>
 
-            <div class="chatbox" id="chatbox-37c0c87392010303765fe36b05c0967d62c6b70f">
+            <div class="chatbox direct-chat" id="chatbox-37c0c87392010303765fe36b05c0967d62c6b70f">
                 <div class="flyout box-flyout">
                     <div class="chat-head chat-head-chatbox row no-gutters">
                         <div class="col">
