Read Only Channel

--- a/dev.html
+++ b/dev.html
@@ -188,7 +188,7 @@ function setAvatar(nickname, avatar)
                 'roomdesc': 'Comfy room for hanging out',
                 'changesubject': false,
                 'maxusers':'40',
-                'presencebroadcast':['moderator','participant'],
+                'presencebroadcast':['moderator','participant','visitors'],
                 'publicroom': false,
                 'persistentroom': true,
                 'moderatedroom':false,
