room configuration invitaion is working

--- a/dev.html
+++ b/dev.html
@@ -197,7 +197,7 @@ function setAvatar(nickname, avatar)
                 'passwordprotectedroom':false,
                 'roomsecret':'scret',
                 'whois': 'moderators',
-                'allowpm':'moderators',
+                'allowpm':'anyone',
                 'enablelogging':true,
                 'reservednick':false,
                 'canchangenick':true,
