--- a/dev.html
+++ b/dev.html
@@ -190,7 +190,7 @@ function setAvatar(nickname, avatar)
                 'changesubject': false,
                 'maxusers':'40',
                 'presencebroadcast':['moderator','participant','visitors'],
-                'publicroom': false,
+                'publicroom': true,
                 'persistentroom': true,
                 'moderatedroom':false,
                 'membersonly': true,
