--- a/mockup/chatbox.html
+++ b/mockup/chatbox.html
@@ -31,7 +31,7 @@
                             </div>
                         </div>
                         <div class="chatbox-buttons row no-gutters">
-                            <a class="chatbox-btn fa fa-close" title="Close this chat box"></a>
+                            <!-- <a class="chatbox-btn fa fa-close" title="Close this chat box"></a> -->
                             <a class="chatbox-btn fa fa-vcard" title="Contact profile" data-toggle="modal" data-target="#contactProfileModal"></a>
                         </div>
                     </div>
