--- a/mockup/controlbox.html
+++ b/mockup/controlbox.html
@@ -103,8 +103,8 @@
 <div id="converse-roster" class="controlbox-section">
     <div class="d-flex controlbox-padded">
         <span class="w-100 controlbox-heading controlbox-heading--contacts">Contacts</span>
-        <a class="fa-spin controlbox-heading__btn fa fa-sync" title="Re-sync your contacts"></a>
-        <a class="controlbox-heading__btn fa fa-user-plus" title="Click to add new chat contacts" data-toggle="modal" data-target="#addContactModal"></a>
+        <!-- <a class="fa-spin controlbox-heading__btn fa fa-sync" title="Re-sync your contacts"></a>
+        <a class="controlbox-heading__btn fa fa-user-plus" title="Click to add new chat contacts" data-toggle="modal" data-target="#addContactModal"></a> -->
     </div>
     <form class="controlbox-padded roster-filter-form input-button-group">
         <div class="form-inline flex-nowrap">
