Chat Tool Plugin Added

--- a/dev.html
+++ b/dev.html
@@ -9,12 +9,18 @@
     <meta name="author" content="JC Brand" />
     <meta name="keywords" content="xmpp chat webchat converse.js" />
     <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
+    <link href="css/getHTMLMediaElement.css" rel="stylesheet">
     <link type="text/css" rel="stylesheet" media="screen" href="dist/converse.css" />
     <link type="text/css" rel="stylesheet" media="screen" href="custom.css" />
-    <script src="config.meetrix.js"></script>
+
+    <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script>
+    <script src="3rdparty/getHTMLMediaElement.js"></script>
+    <script src="3rdparty/RecordRTC.js"></script>
     <script src="3rdparty/libsignal-protocol.js"></script>
     <script src="dist/converse.js"></script>
     <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script>
+    <script src="config.meetrix.js"></script>
 </head>
 
 <body class="reset">
