--- a/dev.html
+++ b/dev.html
@@ -6,6 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Converse.js: A free chat client for your website" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
     <meta name="author" content="JC Brand" />
     <meta name="keywords" content="xmpp chat webchat converse.js" />
     <link rel="shortcut icon" type="image/ico" href="images/favicon.ico"/>
@@ -17,14 +18,16 @@
     <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script>
     <script src="3rdparty/getHTMLMediaElement.js"></script>
     <script src="3rdparty/RecordRTC.js"></script>
-    <script src="3rdparty/libsignal-protocol.js"></script>
     <script src="dist/converse.js"></script>
     <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script>
     <script src="config.meetrix.js"></script>
 </head>
 
-<body class="reset">
-<div id="conversejs-bg"></div>
+<body class="no-select" style="width: 800px; height: 600px;">
+    <div>
+        <div  id="conversejs-bg"></div>
+        <div  id="conference"></div>
+    </div>
 <script src="index.js"></script>
 </body>
 </html>
