Conference Plugin Add

--- a/dev.html
+++ b/dev.html
@@ -15,6 +15,7 @@
     <link type="text/css" rel="stylesheet" media="screen" href="custom.css" />
 
     <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+    <script src="3rdparty/jquery.min.js"></script>
     <script src="https://meet.jit.si/libs/lib-jitsi-meet.min.js"></script>
     <script src="3rdparty/getHTMLMediaElement.js"></script>
     <script src="3rdparty/RecordRTC.js"></script>
